Adapt mvn config and migration to Java 25